// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`negative zero event Win - Chrome - swipe right 1`] = `
Object {
  "phases": Array [
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          -1027.5,
          0,
          0,
        ],
        "axisVelocity": Array [
          -3.0341912599685377,
          0,
          0,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": -48,
          "deltaY": 0,
          "timeStamp": 3995.230000000447,
        },
        "isMomentum": false,
        "type": "WHEEL_END",
      },
      "range": Array [
        0,
        12,
      ],
      "wheelType": "WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          -1810.5,
          0,
          0,
        ],
        "axisVelocity": Array [
          -0.027716186256142486,
          0,
          0,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": -1.5,
          "deltaY": 0,
          "timeStamp": 5711.669999989681,
        },
        "isMomentum": true,
        "type": "MOMENTUM_WHEEL_END",
      },
      "range": Array [
        12,
        95,
      ],
      "wheelType": "MOMENTUM_WHEEL",
    },
  ],
}
`;

exports[`negative zero event Win - Chrome - swipe right fast 1`] = `
Object {
  "phases": Array [
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          -1788,
          0,
          0,
        ],
        "axisVelocity": Array [
          -6.035129859570418,
          0,
          0,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": -96,
          "deltaY": 0,
          "timeStamp": 38815.0050000113,
        },
        "isMomentum": false,
        "type": "WHEEL_END",
      },
      "range": Array [
        0,
        12,
      ],
      "wheelType": "WHEEL",
    },
    Object {
      "lastData": Object {
        "axisDelta": Array [
          0,
          0,
          0,
        ],
        "axisMovement": Array [
          -3631.5,
          0,
          0,
        ],
        "axisVelocity": Array [
          -0.032752879522086574,
          0,
          0,
        ],
        "event": Object {
          "deltaMode": 0,
          "deltaX": -1.5,
          "deltaY": 0,
          "timeStamp": 40598.1900000188,
        },
        "isMomentum": true,
        "type": "MOMENTUM_WHEEL_END",
      },
      "range": Array [
        12,
        107,
      ],
      "wheelType": "MOMENTUM_WHEEL",
    },
  ],
}
`;
